--- a/html/administrator/css/style.css
+++ b/html/administrator/css/style.css
@@ -11,6 +11,25 @@ body {
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
 
+.main-sidebar,
+.left-side {
+    padding-top: 0px;
+}
+
+.skin-blue .wrapper, .skin-blue .main-sidebar, .skin-blue .left-side {
+    background-color: #00344F;
+}
+
+
+.main-sidebar a {
+    display: flex;
+}
+
+.main-sidebar a.logo img {
+    padding: 10px;
+    margin: 0 auto;
+}
+
 div.horizontal-scroll {
     overflow-x: auto ;
 }
