--- a/data/module/Administrator/view/layout/admin-login-layout.phtml
+++ b/data/module/Administrator/view/layout/admin-login-layout.phtml
@@ -14,12 +14,13 @@ echo $this->doctype(); ?>
     ?>
 
     <!-- Le styles -->
-    <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $basePath . '/img/favicon.ico'))
+    <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.jpg'))
         ->appendStylesheet($basePath . '/libs/bootstrap/css/bootstrap.min.css')
         ->appendStylesheet('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
         ->appendStylesheet('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css')
         ->appendStylesheet($basePath . '/css/AdminLTE.min.css')
         ->appendStylesheet($basePath . '/libs/iCheck/square/blue.css')
+        ->appendStylesheet($basePath . '/css/style.css')
     ?>
 
     <!-- Scripts -->
@@ -33,7 +34,7 @@ echo $this->doctype(); ?>
 <div class="login-box">
     <div class="login-logo">
         <!--ABS Consultor-->
-        <!--<img src="<?php /*echo $basePath;*/?>/img/gestor/logo_empresa.jpg">-->
+        <img width="200" src="/img/white-logo-horizontal.png"/>
     </div><!-- /.login-logo -->
     <div class="login-box-body">
         <?php echo $this->content; ?>
