--- a/html/administrator/css/style.css
+++ b/html/administrator/css/style.css
@@ -11,6 +11,10 @@ body {
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
 
+.login-page, .register-page {
+    background-color: #00344F;
+}
+
 .main-sidebar,
 .left-side {
     padding-top: 0px;
