--- a/html/absconsultor/css/style.css
+++ b/html/absconsultor/css/style.css
@@ -6272,7 +6272,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   margin-top: -150px;
   z-index: 10;
-  padding-bottom: 7em; }
+  padding-bottom: 0em; }
   @media screen and (max-width: 768px) {
     #abstpl-intro {
       padding-bottom: 3em; } }
@@ -6372,6 +6372,27 @@ h1, h2, h3, h4, h5, h6 {
       #abstpl-intro .abstpl-block:hover .btn:hover, #abstpl-intro .abstpl-block:focus .btn:hover {
         background: #000 !important;
         border: 2px solid #000 !important; }
+
+#abstpl-certifications {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap; }
+  #abstpl-certifications .certification-icon-info {
+    position: relative;
+    display: block;
+    flex: 1 0 21%;
+    /* explanation below */
+    margin: 5px;
+    height: 100px; }
+    #abstpl-certifications .certification-icon-info span {
+      font-size: 1.3em;
+      position: absolute;
+      bottom: -25px;
+      left: 50%;
+      transform: translateX(-50%);
+      border-radius: 12px;
+      background-color: white; }
 
 .watch-video {
   text-align: center;
