--- a/data/module/Administrator/view/layout/admin-layout.phtml
+++ b/data/module/Administrator/view/layout/admin-layout.phtml
@@ -16,17 +16,17 @@ $basePath = $this->basePath() . '/administrator';
     <!-- Le styles -->
     <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.jpg'))
 
-        ->prependStylesheet($basePath . '/css/style.css')
-        ->prependStylesheet($basePath . '/libs/RichFilemanager/themes/administrator/styles/filemanager.css')
-        ->prependStylesheet($basePath . '/libs/plupload/2.1.9/js/jquery.plupload.queue/css/jquery.plupload.queue.css')
+        ->prependStylesheet($basePath . '/css/style.css?v=' . $this->adminCssVersion)
+        ->prependStylesheet($basePath . '/libs/RichFilemanager/themes/administrator/styles/filemanager.css?v=' . $this->adminCssVersion)
+        ->prependStylesheet($basePath . '/libs/plupload/2.1.9/js/jquery.plupload.queue/css/jquery.plupload.queue.css?v=' . $this->adminCssVersion)
         //->prependStylesheet($basePath . '/libs/daterangepicker/daterangepicker-bs3.css')
-        ->prependStylesheet($basePath . '/libs/datatables/dataTables.bootstrap.css')
-        ->prependStylesheet($basePath . '/css/skins/skin-blue.min.css')
-        ->prependStylesheet($basePath . '/css/AdminLTE.min.css')
-        ->prependStylesheet($basePath . '/libs/select2/css/select2.min.css')
-        ->prependStylesheet($basePath . '/libs/font-awesome/css/font-awesome.min.css')
-        ->prependStylesheet($basePath . '/libs/bootstrap/css/bootstrap.min.css')
-        ->prependStylesheet($basePath . '/libs/datepicker/datepicker3.css')
+        ->prependStylesheet($basePath . '/libs/datatables/dataTables.bootstrap.css?v=' . $this->adminCssVersion)
+        ->prependStylesheet($basePath . '/css/skins/skin-blue.min.css?v=' . $this->adminCssVersion)
+        ->prependStylesheet($basePath . '/css/AdminLTE.min.css?v=' . $this->adminCssVersion)
+        ->prependStylesheet($basePath . '/libs/select2/css/select2.min.css?v=' . $this->adminCssVersion)
+        ->prependStylesheet($basePath . '/libs/font-awesome/css/font-awesome.min.css?v=' . $this->adminCssVersion)
+        ->prependStylesheet($basePath . '/libs/bootstrap/css/bootstrap.min.css?v=' . $this->adminCssVersion)
+        ->prependStylesheet($basePath . '/libs/datepicker/datepicker3.css?v=' . $this->adminCssVersion)
 
          ?>
 </head>
@@ -134,22 +134,20 @@ $basePath = $this->basePath() . '/administrator';
 <!-- Scripts -->
 <?php echo $this->headScript()
 
-    ->prependFile($basePath . '/js/build/administrator.min.js')
-    ->prependFile($basePath . '/libs/plupload/2.1.9/js/jquery.plupload.queue/jquery.plupload.queue.min.js')
-    ->prependFile($basePath . '/libs/plupload/2.1.9/js/plupload.full.min.js')
-    ->prependFile($basePath . '/libs/sortable/sortable.min.js')
-    ->prependFile($basePath . '/libs/select2/js/select2.min.js')
-    ->prependFile($basePath . '/libs/datepicker/bootstrap-datepicker.js')
-    ->prependFile($basePath . '/libs/daterangepicker/moment-with-locales.js')
-    ->prependFile($basePath . '/libs/datatables/dataTables.bootstrap.min.js')
-    ->prependFile($basePath . '/libs/datatables/jquery.dataTables.js')
-    ->prependFile($basePath . '/libs/bootstrap/js/bootstrap.min.js')
-    ->prependFile($basePath . '/libs/jQueryUI/jquery-ui.min.js')
-    ->prependFile($basePath . '/libs/jQuery/jQuery-2.1.4.min.js')
-    ->prependFile($basePath . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
-    ->prependFile($basePath . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
-
-
+    ->prependFile($basePath . '/js/build/administrator.min.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/plupload/2.1.9/js/jquery.plupload.queue/jquery.plupload.queue.min.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/plupload/2.1.9/js/plupload.full.min.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/sortable/sortable.min.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/select2/js/select2.min.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/datepicker/bootstrap-datepicker.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/daterangepicker/moment-with-locales.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/datatables/dataTables.bootstrap.min.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/datatables/jquery.dataTables.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/bootstrap/js/bootstrap.min.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/jQueryUI/jquery-ui.min.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/libs/jQuery/jQuery-2.1.4.min.js?v=' . $this->adminJsVersion)
+    ->prependFile($basePath . '/js/respond.min.js?v=' . $this->adminJsVersion, 'text/javascript', array('conditional' => 'lt IE 9',))
+    ->prependFile($basePath . '/js/html5shiv.js?v=' . $this->adminJsVersion,   'text/javascript', array('conditional' => 'lt IE 9',))
 ;
 
 ?>
